# datagrep-cli

./: .gitignore  CLI_IMPROVEMENT_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  EMPTY_NOTEMPTY_FEATURE.md  ENHANCEMENTS.md  INSTALL.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  README_UPDATE_SUMMARY.md  arabic_sample.csv  arabic_sample.json  datagrep.py  english_sample.json  output.txt  pyproject.toml  sample.csv  search_csv.py  setup.py  test_debug.py  test_error_messages.py  tests.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/agents/: datagrep-improver.agent.md
completion/: datagrep.bash  datagrep.fish  datagrep.ps1  datagrep.zsh
docs/: ARCHITECTURE.md  CODE_REVIEW.md  CONTRIBUTING.md  COUNT_AND_SHOW_COUNT.md  ERROR_HANDLING_IMPROVEMENTS.md  FAQ.md  FOLDER_ORGANIZATION.md  INDEX.md  INSPECTION_MODE_FIX.md  INSTALLATION.md  LAZY_LOADING.md  LAZY_LOADING_IMPLEMENTATION.md  MIGRATION.md  OPTIONS.md  PERFORMANCE.md  README_REVISION.md  REFACTORING_ARCHITECTURE.md  USAGE.md  WHERE_WITHOUT_SEARCH_FIX.md
examples/configs/: config-template.json  customer-search.config.json  inventory-search.config.json  log-analysis.config.json
examples/data/: sample_customers.csv  sample_products.json
scripts/: search_csv_legacy.py  setup-dev.sh
src/: __init__.py  cli.py  datagrep.py
src/core/: __init__.py  engine.py  formatter.py  loader.py
src/utils/: __init__.py  exceptions.py  formatting.py  io.py  parsing.py
tests/: __init__.py  tests.py
